# resume_anlyser_backend

./: .gitignore  ai_service.py  auth.py  main.py  package-lock.json  pyproject.toml  requirements.txt  resume_parser.py
config/: db.py
fontend/: package-lock.json  package.json
fontend/src/app/: globals.css  layout.js  page.js
fontend/src/app/auth/: page.js
fontend/src/app/dashboard/: page.js
fontend/src/components/: AIInterview.js  AptitudeTest.js  MockAssessment.js  Progress.js  ResumeAnalyzer.js  Settings.js  Sidebar.js  TopicPreparation.js
fontend/src/lib/: api.js
models/: analysis.py  user.py
